--- a/Assets/Plugins/Features/Web.xml
+++ b/Assets/Plugins/Features/Web.xml
@@ -4,6 +4,53 @@
         <name>Web</name>
     </assembly>
     <members>
+        <member name="T:BuddyFeature.Web.JSON">
+            <summary>
+            This class encodes and decodes JSON strings.
+            Spec. details, see http://www.json.org/
+            
+            JSON uses Arrays and Objects. These correspond here to the datatypes ArrayList and Hashtable.
+            All numbers are parsed to floats, ints, or longs.
+            </summary>
+            
+        </member>
+        <member name="M:BuddyFeature.Web.JSON.JsonDecode(System.Byte[])">
+            <summary>
+            Parses the string json into a value
+            </summary>
+            <param name="json">A JSON byte array.</param>
+            <returns>An ArrayList, a Hashtable, a double, a string, null, true, or false</returns>
+        </member>
+        <member name="M:BuddyFeature.Web.JSON.JsonDecode(System.String)">
+            <summary>
+            Parses the string json into a value
+            </summary>
+            <param name="json">A JSON string.</param>
+            <returns>An ArrayList, a Hashtable, a double, a string, null, true, or false</returns>
+        </member>
+        <member name="M:BuddyFeature.Web.JSON.JsonDecode(System.String,System.Boolean@)">
+            <summary>
+            Parses the string json into a value; and fills 'success' with the successfullness of the parse.
+            </summary>
+            <param name="json">A JSON string.</param>
+            <param name="success">Successful parse?</param>
+            <returns>An ArrayList, a Hashtable, a double, a string, null, true, or false</returns>
+        </member>
+        <member name="M:BuddyFeature.Web.JSON.JsonEncode(System.Object)">
+            <summary>
+            Converts a Hashtable / ArrayList object into a JSON string
+            </summary>
+            <param name="json">A Hashtable / ArrayList</param>
+            <returns>A JSON encoded string, or null if object 'json' is not serializable</returns>
+        </member>
+        <member name="M:BuddyFeature.Web.JSON.IsNumeric(System.Object)">
+            <summary>
+            Determines if a given object is numeric in any way
+            (can be integer, double, null, etc). 
+            
+            Thanks to mtighe for pointing out Double.TryParse to me.
+            </summary>
+        </member>
         <member name="T:BuddyFeature.Web.SMTP">
             <summary>
             Enum of the different smtp that can be used to send mail
