[GIT] Update gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -45,3 +45,4 @@ Thumbs.db
 /Assets/Plugins/Android/Webrtc-debug.aar
 /Assets/SDK/OS/Resources/Raw/fr_word2vec.bin
 /Assets/SDK/OS/Resources/Raw/fr_word2vec.bin.meta
+credentials.xml
