--- a/Assets/Plugins/Android/AndroidManifest.xml
+++ b/Assets/Plugins/Android/AndroidManifest.xml
@@ -45,7 +45,7 @@
     <uses-feature android:name="android.hardware.usb.host"/>
     <uses-feature android:name="android.hardware.camera2.full"/>
 
-    <application android:label="@string/app_name">
+    <application android:label="@string/app_name" android:theme="@style/UnityThemeSelector">
 			
         <activity
             android:name=".MainActivity"
